add initial support for parameters to deal with path params
