# yang-openapi.js
@@ -1,6 +1,6 @@
 // Generated by CoffeeScript 1.11.1
 (function() {
-  var Yang, clone, debug, definitions, discoverOperations, discoverPaths, serializeJSchema, traverse, yaml, yang2jschema, yang2jsobj, yang2jstype;
+  var Yang, clone, debug, definitions, discoverOperations, discoverParameters, discoverPaths, serializeJSchema, traverse, yaml, yang2jschema, yang2jsobj, yang2jstype;
 
   if (process.env.DEBUG != null) {
     debug = require('debug')('yang:openapi');
@@ -183,7 +183,7 @@
   };
 
   discoverOperations = function(schema, item) {
-    var deprecated, ref1, ref10, ref2, ref3, ref4, ref5, ref6, ref7, ref8, ref9;
+    var deprecated, ref1, ref2, ref3, ref4;
     if (item == null) {
       item = false;
     }
@@ -224,7 +224,6 @@
             ]
           }, {
             method: 'get',
-            description: (ref4 = schema.description) != null ? ref4.tag : void 0,
             summary: "List all " + schema.tag + "s from " + schema.parent.tag,
             deprecated: deprecated,
             response: [
@@ -236,7 +235,6 @@
             ]
           }, {
             method: 'put',
-            description: (ref5 = schema.description) != null ? ref5.tag : void 0,
             summary: "Replace the entire " + schema.tag + " collection",
             deprecated: deprecated,
             response: [
@@ -247,7 +245,6 @@
             ]
           }, {
             method: 'patch',
-            description: (ref6 = schema.description) != null ? ref6.tag : void 0,
             summary: "Merge items into the " + schema.tag + " collection",
             deprecated: deprecated,
             response: [
@@ -262,7 +259,7 @@
         return [
           {
             method: 'get',
-            description: (ref7 = schema.description) != null ? ref7.tag : void 0,
+            description: (ref4 = schema.description) != null ? ref4.tag : void 0,
             summary: "View detail on " + schema.tag,
             deprecated: deprecated,
             response: [
@@ -274,7 +271,6 @@
             ]
           }, {
             method: 'put',
-            description: (ref8 = schema.description) != null ? ref8.tag : void 0,
             summary: "Update details on " + schema.tag,
             deprecated: deprecated,
             response: [
@@ -286,7 +282,6 @@
             ]
           }, {
             method: 'patch',
-            description: (ref9 = schema.description) != null ? ref9.tag : void 0,
             summary: "Merge details on " + schema.tag,
             deprecated: deprecated,
             response: [
@@ -298,7 +293,6 @@
             ]
           }, {
             method: 'delete',
-            description: (ref10 = schema.description) != null ? ref10.tag : void 0,
             summary: "Delete " + schema.tag + " from " + schema.parent.tag + ".",
             deprecated: deprecated,
             response: [
@@ -312,9 +306,54 @@
     }
   };
 
+  discoverParameters = function(schema) {
+    var k, key, param, ref1, ref2, v;
+    if (typeof debug === "function") {
+      debug("[" + schema.trail + "] discovering parameters");
+    }
+    key = "" + ((ref1 = schema.key) != null ? ref1.valueOf() : void 0);
+    switch (false) {
+      case !(schema.key == null):
+        return [
+          {
+            name: 'index',
+            "in": 'path',
+            required: true,
+            type: 'integer',
+            format: 'int64'
+          }
+        ];
+      case !(schema.key.tag.length > 1):
+        return [
+          {
+            name: key,
+            "in": 'path',
+            required: true,
+            type: 'string',
+            format: 'composite'
+          }
+        ];
+      default:
+        param = {
+          name: key,
+          "in": 'path',
+          required: true
+        };
+        ref2 = yang2jstype(schema.locate(key));
+        for (k in ref2) {
+          v = ref2[k];
+          param[k] = v;
+        }
+        return [param];
+    }
+  };
+
   discoverPaths = function(schema) {
-    var key, name, paths, ref1, ref2, ref3, ref4, sub, subpaths;
+    var key, name, params, paths, ref1, ref2, ref3, ref4, sub, subpaths;
     if ((ref1 = schema.kind) !== 'list' && ref1 !== 'container' && ref1 !== 'rpc') {
+      return [];
+    }
+    if (schema['if-feature'] != null) {
       return [];
     }
     name = "/" + schema.datakey;
@@ -339,13 +378,22 @@
     })());
     switch (schema.kind) {
       case 'list':
-        key = (ref3 = (ref4 = schema.key) != null ? ref4.valueOf() : void 0) != null ? ref3 : 'id';
+        key = (ref3 = (ref4 = schema.key) != null ? ref4.valueOf() : void 0) != null ? ref3 : 'index';
+        params = discoverParameters(schema);
         paths.push({
           name: name + "/{" + key + "}",
+          parameter: params,
           operation: discoverOperations(schema, true)
         });
         subpaths.forEach(function(x) {
-          return x.name = (name + "/{" + key + "}") + x.name;
+          var ref5;
+          x.name = (name + "/{" + key + "}") + x.name;
+          if ((ref5 = x.parameter) != null) {
+            if (typeof ref5.push === "function") {
+              ref5.push.apply(ref5, params);
+            }
+          }
+          return x.parameter != null ? x.parameter : x.parameter = params;
         });
         break;
       case 'container':
@@ -460,6 +508,7 @@
             return x;
           }), {});
         }
+        path.parameters = _path.parameter;
         return a;
       }), {});
       spec.definitions = (ref1 = spec.definition) != null ? ref1.reduce((function(a, _def) {
